# context-core-api

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: _test_common.sh  ci.yml  test-clang-format.sh  test-gcc.sh  test-package.sh
include/: context_core_api.h
src/: context_core_api.cpp
test/: CMakeLists.txt  test_c_compilation.c  test_context.cpp  test_smoke.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
